allow add headers in request

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,10 @@
 					value="/v1/achuacuixxx/test.txt" size="40" /></td>
 			</tr>
 			<tr>
+				<td>headers</td>
+				<td><input type="text" name="headers" value="" size="40" /></td>
+			</tr>
+			<tr>
 				<td>queryString</td>
 				<td><input type="text" name="queryString" value="" size="40" /></td>
 			</tr>
