--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,12 +28,14 @@
 					value="/v1/achuacuixxx/test.txt" size="40" /></td>
 			</tr>
 			<tr>
-				<td>headers</td>
-				<td><input type="text" name="headers" value="" size="40" /></td>
+				<td title="split with &">headers</td>
+				<td><input type="text" name="headers" value="" size="40"
+					title="split with &" /></td>
 			</tr>
 			<tr>
-				<td>queryString</td>
-				<td><input type="text" name="queryString" value="" size="40" /></td>
+				<td title="split with &">queryString</td>
+				<td><input type="text" name="queryString" value="" size="40"
+					title="split with &" /></td>
 			</tr>
 			<tr>
 				<td>body</td>
@@ -46,13 +48,11 @@
 			</tr>
 			<tr>
 				<td>accessKey</td>
-				<td><input type="text" name="accessKey"
-					value="" size="40" /></td>
+				<td><input type="text" name="accessKey" value="" size="40" /></td>
 			</tr>
 			<tr>
 				<td>secretKey</td>
-				<td><input type="text" name="secretKey"
-					value="" size="40" /></td>
+				<td><input type="text" name="secretKey" value="" size="40" /></td>
 			</tr>
 			<tr>
 				<td title="time format: yyyy-MM-dd HH:mm:ss">date</td>
@@ -61,7 +61,8 @@
 			</tr>
 			<tr>
 				<td>options</td>
-				<td><input type="checkbox" name="option" value="check" >Run on server </td>
+				<td><input type="checkbox" name="option" value="check">Run
+					on server</td>
 			</tr>
 			<tr>
 				<td></td>
